--- a/test_accuracy_paper/test_accuracy_intro.tex
+++ b/test_accuracy_paper/test_accuracy_intro.tex
@@ -99,9 +99,8 @@ In summary, our main results are the following:
 \item
 We introduce a \nred{new} methodology to analyze the performance of large-scale pre-trained DNNs,
 using a phenomena observed in our theory of HT-SR we call Heavy Tailed Mechanistic Universality (HT-MU).
-Our \nred{motivations lie in} Statistical Physics, and, in particular, the concept of Universality underlying HT-SR (and related HT-RMT techniques).
-It it involves constructing a Universal capacity control metric to predict average DNN test performance.
-This metric is a weighted \nred{average} of layer PL exponents, $\hat{alpha}$, weighted by the Spectral Norm
+\nred{We construct} ta Universal capacity control metric to predict average DNN test performance.
+This metric is a weighted \nred{average} of layer PL exponents, $\hat{\alpha}$, weighted by the Spectral Norm
 (i.e. maximum eigenvalue) of layer correlation matrices. \nred{EQUATION NEEDED}
 \item
 We apply our Universal capacity control metric $\hat{\alpha}$ to a wide range of large-scale pre-trained production-level DNNs,?
