--- a/test_accuracy_paper/test_accuracy_intro.tex
+++ b/test_accuracy_paper/test_accuracy_intro.tex
@@ -109,7 +109,7 @@ This Universal metric \nred{correlates very well with the reported} average test
 %(without the need for re-training or looking at test data, although one could use the metrics as a training diagnostic).
 \item
 \nred{We derive the relation between our Universal capacity control metric $\hat{\alpha}$ and the well known Product Norm} capacity control metric, i.e
-the average Frobenius norm $\langle\Vert\mathbf{W}\Vert_{F}\rangle$.
+the average log of the Frobenius norm $\langle\Vert\log\mathbf{W}\Vert_{F}\rangle$.
 We also show that
 % (in addition to providing worst-case bounds on generalization quality for rather small NNs)
 such norm-based capacity control metrics \nred{also correlate well} with the average test error in large-scale production-level pre-trained DNNs.
