--- a/test_accuracy_paper/test_accuracy_intro.tex
+++ b/test_accuracy_paper/test_accuracy_intro.tex
@@ -53,8 +53,8 @@ in the average case generalization performance for large-scale pre-trained DNNs.
 % again, too dense 
 To place these results in context, \nred{our earlier work}~\cite{MM18_TR}
  %recall that the work of Martin and Mahoney~\cite{MM18_TR} showed
- shows that the empirical spectral density (ESD) of DNN layer matrices 
-  displays HT behavior for nearly every large-scale pre-trained DNN.
+ shows that for nearly every large-scale pre-trained DNN
+the empirical spectral density (ESD) of the layer weight matrices displays HT behavior.
   \nred{The layer weight matrices (at least the linear ones) fit} a PL distribution, and that smaller PL exponents $\alpha$ correspond to better implicit Self-Regularization and generalization quality.
 Motived by these empirical observations, and using the Universality properties of Heavy-Tailed Random Matrix Theory (HT-RMT), they developed a Theory of Heavy-Tailed Self-Regularization (HT-SR) for DNNs~\cite{MM17_TR,MM18_TR}.
 In the Statistical Physics analysis of complicated systems (e.g., many physical systems, but also well-trained NNs~\cite{EB01_BOOK,nishimori01}), Universality of PL exponents is very special and suggests the presence of a deeper, underlying mechanism driving the system~\cite{SornetteBook,BouchaudPotters03}.% 
