--- a/test_accuracy_paper/test_accuracy_intro.tex
+++ b/test_accuracy_paper/test_accuracy_intro.tex
@@ -55,7 +55,7 @@ metric for large DNNs with many layers.   Of course, bounding a DNN does not nec
 directly comparable across layers in different architectures.  To predict trends in the test accuracies, one needs some Universal empirical metric.
 }
 
-\michael{I WILL REWORK THIS TOO:  to address our main question, we will build upon and combine two seemingly-unrelated lines of recent work.
+\michael{I WILL REWORK THIS TOO, INLY DISCUSS OUR WORK HERE:  to address our main question, we will build upon and combine two seemingly-unrelated lines of recent work.
 The first is that of Martin and Mahoney~\cite{MM17_TR,MM18_TR}, which considered Heavy-Tailed (HT) Universality methods from Statistical Physics to analyze weight matrices constructed from large-scale pre-trained DNNs.
 The second is that of Liao et al.~\cite{LMBx18_TR}, which used norm-based capacity control metrics to bound the worst-case generalization error for several small (non production-quality, but still \nred{interesting}) DNN models.
 \nred{AWK:}
