--- a/test_accuracy_paper/test_accuracy_intro.tex
+++ b/test_accuracy_paper/test_accuracy_intro.tex
@@ -40,46 +40,91 @@ Here, it would also be very helpful to be able to fine tune large, pretrained DN
 \textbf{Unsupervised Deep Learning}
 \end{itemize}
 
-\charlesX{TRY THIS FOR LEADIN. We want to predict the trends in the generalization accuracy a series of DNN architectures; how can we do this ?
+\charlesX{TRY THIS FOR LEADIN. 
+
+We want to predict the trends in the generalization accuracy a series of DNN architectures; how can we do this ?
 VC-like theories offer theoretical bounds on the generalization accuracy.  Practically, such capacity metrics can guide the
 theoretical development of new regularizers for traditional ML optimization problems (i.e. counterfactual expected risk minimization ),
 but the bounds themselves are far too loose to be used directly.  Moreover, since the early days of neural network research, even
 Vapnik himself argued that his VC theory could (probably) not be directly applied to the seemingly widely non-convex optimization problem
 implicitly posed by neural networks.   This has caused some researchers to suggest we need to rethink regularization in DNNs entirely.
 
-Still perhaps it is not really this hard ?   Recent work by  Liao et al.~\cite{LMBx18_TR} used a data-dependent Product Norm capacity control metric
+Still perhaps it is not really this hard ?   Recent work by  Liao et al.~\cite{LMBx18_TR} used an appropriately-scaled, data-dependent Product Norm capacity control metric
 to bound the worst-case generalization error for several small (non production-quality, but still \nred{interesting}) DNN models...and the bounds are remarkably tight.
-To achieve this result, however, hthey had to modify the DNN optimization loss function.  So this can not be tested on any existing pre-trained DNN architecture,
-such as the VGG and ResNet models, widely used today in industry.  Still, these results do suggest that a Product Norm may work well as a capacity
-metric for large DNNs with many layers.   Of course, bounding a DNN does not necessarily mean that the individual  weight matrix Norms are 
-directly comparable across layers in different architectures.  To predict trends in the test accuracies, one needs some Universal empirical metric.
-}
+To achieve this result, however, they had to modify the DNN optimization loss function.  So this can not be tested on any existing pre-trained DNN architecture,
+such as the VGG and ResNet models, widely used today in industry. }
+\ngreen{There is, in fact, a large body of work on norm-based capacity control metrics, both recent e.g.,~\cite{LMBx18_TR, SHNx17_TR,PLMx18_TR} and~\cite{NTS14_TR,NTS15,NBMS17_TR,BFT17_TR,YM17_TR,KKB17_TR,NBS17_TR,AGNZ18_TR,ACH18_TR,ZF18_TR},
+%but
+\nred{and} much older ~\cite{Bar97,MN09_TR}. 
+%Much of this work has been motivated by the observation that parameter counting and more traditional VC-based bounds tend to lead to 
+%vacuous results for modern state-of-the-art DNNs, e.g., since modern DNNs are heavily over-parameterized and depend so strongly on the training data.
+\charlesX{
+But, as with most theoretical studies, Liao et al's approach and intent differ greatly from ours; they seek a \emph{worst-case} complexity bound, motivated to reconcile discrepancies 
+with more traditional statistical learning theory, and they apply it to quite small NNs; but we seek an \emph{average-case} 
+complexity metric , viable in production to guide the development of better DNNs at scale.
+And  bounding a toy model does not necessarily mean that the individual weight matrix Norms will be 
+directly comparable across layers in different, and more complex, architectures.
+Still, these results do suggest that a Product Norm may work well as a \emph{practical} capacity metric for large, and even pre-trained,
+production quality DNNs.   
+To predict trends in the test accuracies, one needs some \emph{Universal} empirical metric that transfers across DNN architectures.
 
-\michael{I WILL REWORK THIS TOO, INLY DISCUSS OUR WORK HERE:  to address our main question, we will build upon and combine two seemingly-unrelated lines of recent work.
-The first is that of Martin and Mahoney~\cite{MM17_TR,MM18_TR}, which considered Heavy-Tailed (HT) Universality methods from Statistical Physics to analyze weight matrices constructed from large-scale pre-trained DNNs.
-The second is that of Liao et al.~\cite{LMBx18_TR}, which used norm-based capacity control metrics to bound the worst-case generalization error for several small (non production-quality, but still \nred{interesting}) DNN models.
-\nred{AWK:}
+Recent work Martin and Mahoney~\cite{MM18_TR} provides and Universal empirical metric that characterizes the amount of \emph{Implicit Self-Regularization}
+and, accordingly, the generalization capacity, or a wide range of pretrained DNNs-- the Power Law (PL) exponents, $\alpha$, of the invidual layer weight matrices $\mathbf{W}$,
+as determined by fitting the Empirical Spectral Density (ESD), $\rho(\lambda)$, to a PL distribution according to Heavy Tailed Random Matrix Theory. (HT-RMT)
+Looking in detail at a series of models, like AlexNet, VGG, ResNet, etc, they observe that the (linear) layer weight matrices almost always follow a PL distribution,
+and the fitted PL exponents nearly all lie within a universal range $\alpha\in[2,5]$.   Further analysis of a small model (MinAlexNet) shows that 
+smaller PL exponents $\alpha$ correspond to better generalization.
+When we observe good empirical PL fits for the ESDs of the correlations of layer weight matrices, we say the DNN \emph{exhibits Heavy Tailed (HT) behavior}.
+And we have observed  Heavy Tailed (HT) behavior in every pre-trained architecture studied, across nearly $7500$ layer weight matrices (and 2D feature maps),
+including DNNs pre-trained on for computer vision tasks on ImageNet, and for different NLP tasks.
+Motived by these empirical observations, and using the Universality properties of Heavy-Tailed Random Matrix Theory (HT-RMT), 
+they developed a theory of Heavy-Tailed Self-Regularization (HT-SR) for DNNs~\cite{MM17_TR,MM18_TR}.
+
+In Statistical Physics, Universality of PL exponents is very special, and suggests the presence of a deeper, underlying, \emph{Universal mechanism}
+ driving the system dynamics~\cite{SornetteBook,BouchaudPotters03}.
+ This applies to the analysis of complicated systems, including many physical systems,  traditional Neural Networks\cite{EB01_BOOK,nishimori01}),
+and even models of the dynamics of actual spiking neurons.
+Indeed, the dynamics of learning in DNNs (and perhaps real neurons as well) seems to resemble a system near a phase transition,
+such as the phase boundary of spin glass, or a system displaying Self Organized Criticality (SOC), or , say, a Jamming transition.  
+And It  is this \ngreen{\emph{Heavy Tailed Mechanistic Universality} (HT-MU), as well call it,} 
+ that originally motivated our study.  
+
+
+
+Of course, we can not say which mechanism, if any, is at play.  Instead, we use the machinery of  HT-RMT 
+as a stand-in for a generative model of the weight matrices in DNNs, to catalog and model the  HT behavior of DNNs.
+\footnote{Perhaps the most well-known form of Universality in RMT is associated with the Gaussian Universality class, where the sum of many random variables drawn from a wide range of distributions is ``approximately Gaussian,'' e.g., in the sense that the sum approaches a suitably-normalized Gaussian distribution.  As briefly reviewed in Section~\ref{sxn:theory-review}, HT Universality makes analogous (but, admittedly, more complicated) statements for random variables drawn from distributions in which the tails decay more slowly than those in the Gaussian Universality class~\cite{MM18_TR}.}
+}
+\nred{STOPPED HERE? We catalog the DNN ESDs into  RMT Universality classes, and use the mathematical form of the $\rho(\lambda)$, and the tail statistics,
+to build Universality relations that even cross the ...}
+
+
+%\michael{I WILL REWORK THIS TOO, INLY DISCUSS OUR WORK HERE:  to address our main question, we will build upon and combine two seemingly-unrelated lines of recent work.
+%The first is that of Martin and Mahoney~\cite{MM17_TR,MM18_TR}, which considered Heavy-Tailed (HT) Universality methods from Statistical Physics to analyze weight matrices constructed from large-scale pre-trained DNNs.
+%The second is that of Liao et al.~\cite{LMBx18_TR}, which used norm-based capacity control metrics to bound the worst-case generalization error for several small (non production-quality, but still \nred{interesting}) DNN models.
+\nred{CLEAN UP BELOW}
 Based on these ideas, we develop a Universal capacity control metric $\hat{\alpha}$ that is a weighted average of the layer Power Law (PL) exponents.
 $(\alpha)$ of the DNN layer weight matrices. The average weights depend on the log Spectral norm (i.e. maximum eigenvalue) of the associated correlations matrices.
 We show this metric can be approximated by the  \nred{average  log Frobenius norm}  of the weight matrices $\langle\log\Vert\mathbf{W}\Vert_F{}\rangle$.
 Rather than considering bounds on the worst-case generalization accuracy for small toy NNs, we show that $\hat{\alpha}$ predict trends 
 in the average case generalization performance for large-scale pre-trained DNNs.
-}
+
 % again, too dense 
-To place these results in context, \nred{our earlier work}~\cite{MM18_TR}
+%To place these results in context, \nred{our earlier work}~\cite{MM18_TR}
  %recall that the work of Martin and Mahoney~\cite{MM18_TR} showed
- shows that for nearly every large-scale pre-trained DNN
-the empirical spectral density (ESD) of the layer weight matrices displays HT behavior.
-  \nred{The layer weight matrices (at least the linear ones) fit} a PL distribution, and that smaller PL exponents $\alpha$ correspond to better implicit Self-Regularization and generalization quality.
-Motived by these empirical observations, and using the Universality properties of Heavy-Tailed Random Matrix Theory (HT-RMT), they developed a Theory of Heavy-Tailed Self-Regularization (HT-SR) for DNNs~\cite{MM17_TR,MM18_TR}.
-In the Statistical Physics analysis of complicated systems (e.g., many physical systems, but also well-trained NNs~\cite{EB01_BOOK,nishimori01}), Universality of PL exponents is very special and suggests the presence of a deeper, underlying mechanism driving the system~\cite{SornetteBook,BouchaudPotters03}.% 
-\footnote{Perhaps the most well-known form of Universality is associated with the Gaussian Universality class, where the sum of many random variables drawn from a wide range of distributions is ``approximately Gaussian,'' e.g., in the sense that the sum approaches a suitably-normalized Gaussian distribution.  As briefly reviewed in Section~\ref{sxn:theory-review}, HT Universality makes analogous (but, admittedly, more complicated) statements for random variables drawn from distributions in which the tails decay more slowly than those in the Gaussian Universality class~\cite{MM18_TR}.}
-It is this \ngreen{\emph{Heavy Tailed Mechanistic Universality} (HT-MU), as well call it,} that originally motivated our study.
+ %shows that for nearly every large-scale pre-trained DNN
+%the empirical spectral density (ESD) of the layer weight matrices displays HT behavior.
+ % \nred{The layer weight matrices (at least the linear ones) fit} a PL distribution, and that smaller PL exponents $\alpha$ correspond to better implicit Self-Regularization and generalization quality.
+%Motived by these empirical observations, and using the Universality properties of Heavy-Tailed Random Matrix Theory (HT-RMT), they developed a Theory of Heavy-Tailed Self-Regularization (HT-SR) for %DNNs~\cite{MM17_TR,MM18_TR}.
+%In the Statistical Physics analysis of complicated systems (e.g., many physical systems, but also well-trained NNs~\cite{EB01_BOOK,nishimori01}), Universality of PL exponents is very special and suggests the presence %of a deeper, underlying mechanism driving the system~\cite{SornetteBook,BouchaudPotters03}.% 
+%\footnote{Perhaps the most well-known form of Universality is associated with the Gaussian Universality class, where the sum of many random variables drawn from a wide range of distributions is ``approximately %Gaussian,'' e.g., in the sense that the sum approaches a suitably-normalized Gaussian distribution.  As briefly reviewed in Section~\ref{sxn:theory-review}, HT Universality makes analogous (but, admittedly, more complicated) statements for random variables drawn from distributions in which the tails decay more slowly than those in the Gaussian Universality class~\cite{MM18_TR}.}
+%It is this \ngreen{\emph{Heavy Tailed Mechanistic Universality} (HT-MU), as well call it,} that originally motivated our study.
+
 
 This Universality \emph{suggests} that we look for a \emph{Universal Capacity Control Metric}.
 \footnote{To be clear, this metric is Universal, not in the sense that it will apply ``universally'' to every possible DNN, but in the Statistical Physics sense~\cite{SornetteBook,BouchaudPotters03} that it should apply to matrices within/across HT ``Universality''~classes.}
 \ngreen{
-Indeed, nearly all large, pre-trained DNNs have smallish layer PL exponents  $\alpha$ (at least for the linear layers), all lying within the same Fat-Tailed Universality class.  
+Indeed, nearly all large, pre-trained DNNs have smallish layer PL exponents  $\alpha$, all lying within the same Fat-Tailed Universality class.  
 The exponents are small, but not too small.  
 Additionally, the HT-SR studies on small models show that DNNs that generalize better have smaller layer PL exponents.
 These 2 facts suggest that, when comparable, large, production DNNs that generalize better, should have, on average, smaller $\alpha$.  
@@ -98,19 +143,11 @@ $\langle\Vert\mathbf{W}_{F}\Vert\rangle$ of the layer weight matrices.}
 \nred{(See Eqn.~(\ref{eqn:basic_relation}) below.)}
 
 
-% Relating the  PL exponent to the Frobenius norm provides an interesting connection with the . 
-\ngreen{Of course, there is a large body of work on norm-based capacity control metrics, so we expect we can relate our Universality to these established methods--but our intent is different.}
-There is recent work along these lines, e.g.,~\cite{LMBx18_TR, SHNx17_TR,PLMx18_TR} and~\cite{NTS14_TR,NTS15,NBMS17_TR,BFT17_TR,YM17_TR,KKB17_TR,NBS17_TR,AGNZ18_TR,ACH18_TR,ZF18_TR},
-%but
-\nred{and} there is also much older work~\cite{Bar97,MN09_TR}.
-Much of this work has been motivated by the observation that parameter counting and more traditional VC-based bounds tend to lead to vacuous results for modern state-of-the-art DNNs, e.g., since modern DNNs are heavily over-parameterized and depend so strongly on the training data.
-Perhaps the most related example from this line of work is that of Liao et al.~\cite{LMBx18_TR}, who use an appropriately-scaled Product Norm to provide tight bounds on generalization accuracy.
-Unlike their result, however, our approach does not require modifying the loss function.
-Moreover, their approach and their intent are a bit different: they seek a \emph{worst-case} complexity bound, to reconcile discrepancies with more traditional statistical learning theory, and they apply it to quite small NNs; but we seek an \emph{average-case} complexity metric that can be used in production to guide the development of better DNNs at scale.
+
+}
+\nred{NEED MORE HERE..}
 
 In summary, our main results are the following:
-
-
 \begin{itemize}
 \item
 We introduce a \nred{new} methodology to analyze the performance of large-scale pre-trained DNNs,
